Refactor list_row_image
should only return the image name, without suffix or prefix
no image_path

that's done in the partials on use

--- a/app/views/layouts/quadicon/_single_quad.html.haml
+++ b/app/views/layouts/quadicon/_single_quad.html.haml
@@ -7,7 +7,7 @@
   - elsif item.kind_of?(ManageIQ::Providers::Foreman::ConfigurationManager)
     - img = "vendor-#{item.image_name}"
   - elsif item.kind_of?(ConfigurationProfile)
-    - img = controller.send(:list_row_image, nil, item.class.base_class.to_s.underscore, "configuration_profile", item)
+    - img = controller.send(:list_row_image, item.class.base_class.to_s.underscore, item)
   - else
     - img = item.class.base_class.to_s.underscore
   .flobj
