--- a/app/views/dashboard/login.html.haml
+++ b/app/views/dashboard/login.html.haml
@@ -62,31 +62,25 @@
                           :title        => _("Update Password"))
 
           .col-xs-4.col-md-3.submit
-            = link_to(_("Login"),
-                      {:action => "authenticate",
-                       :button => "login"},
+            - login_url = url_for(:action => "authenticate",
+                                  :button => "login")
+            - sso_url = url_for(:action => "kerberos_authenticate",
+                                :button => "sso_login")
+
+            = link_to(_("Login"), '',
                       :id                   => "login",
                       :class                => "btn btn-primary",
                       :alt                  => "Login",
                       :title                => _("Login"),
-                      :remote               => true,
-                      "data-method"         => :post,
-                      "data-miq_sparkle_on" => true,
-                      "data-submit"         => 'login_div')
+                      :onclick              => "miqAjaxAuth('#{j login_url}')")
 
-            = link_to(_("SSO Login"),
-                      {:action => "kerberos_authenticate",
-                       :button => "sso_login"},
+            = link_to(_("SSO Login"), '',
                       :id                    => "sso_login",
                       :class                 => "btn btn-primary",
                       :alt                   => "SSO Login",
                       :title                 => _("SSO Login"),
-                      :remote                => true,
-                      "data-method"          => :post,
                       :style                 => "display: none;",
-                      "data-miq_sparkle_on"  => true,
-                      "data-miq_login_error" => true,
-                      "data-submit"          => 'login_div')
+                      :onclick              => "miqAjaxAuth('#{j sso_url}')")
 
     .col-md-6.col-lg-7.details
       - if get_vmdb_config[:session][:show_login_info]
