--- a/app/views/container_topology/show.html.haml
+++ b/app/views/container_topology/show.html.haml
@@ -85,7 +85,7 @@
     %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"}
       %span.pficon.pficon-close
     %span.pficon.pficon-info
-    %strong  Click on the legend to show/hide entities, and double click on the entities in the graph to navigate to their summary pages.
+    %strong  Click on the legend to show/hide entities, and double click/right click the entities in the graph to navigate to their summary pages.
   %kubernetes-topology-graph{:items => "items", :relations => "relations", :kinds => "kinds"}
 :javascript
   $(function($) {
