DialogRunner - fix miq_observe functionality on selectpickers
depends on 9a828a49722abee887fa786a872ed23c3080a24f, which is the important part of the fix

this fixes initializeDialogSelectPicker to not assume trigger_auto_refresh by default
and calls that instead of miqInitSelectPicker + miqSelectPickerEvent (both are called from initializeDialogSelectPicker)

also selectedValue is made optional (because it is already handled by select_tag)

also, the data-miq_observe attribue is removed from drop_downs, since that functionality is handled by miqSelectPickerEvent for selectpickers

https://bugzilla.redhat.com/show_bug.cgi?id=1302331

--- a/app/views/shared/dialogs/_dialog_field.html.haml
+++ b/app/views/shared/dialogs/_dialog_field.html.haml
@@ -50,8 +50,7 @@
                        drop_down_options(field, url).merge(:multiple => true))
 
         :javascript
-          miqInitSelectPicker();
-          miqSelectPickerEvent('#{field.name}', '#{url}');
+          dialogFieldRefresh.initializeDialogSelectPicker('#{field.name}', '#{field.id}', undefined, '#{url}', '#{field.trigger_auto_refresh}');
 
       - else
         - value = wf.value(field.name) || ''
