--- a/app/views/layouts/_taskbar.html.haml
+++ b/app/views/layouts/_taskbar.html.haml
@@ -8,7 +8,8 @@
 - if fname = custom_toolbar_filename
   - defered_toolbar_render('custom_tb', fname)
 
-= render :partial => "layouts/view_buttons"
+- defered_toolbar_render('view_tb', view_toolbar_filename)
+
 - if  @layout == "dashboard"
   = render :partial => "/layouts/tabs"
 = render_toolbars
