--- a/app/views/layouts/_policy_sim.html.haml
+++ b/app/views/layouts/_policy_sim.html.haml
@@ -10,9 +10,11 @@
             %strong= _("Select a Policy Profile to add:")
             = select_tag("profile_id",
                          options_for_select(@all_profs.invert.sort_by { |desc, _id| desc.downcase }, "select"),
-                         "data-miq_sparkle_on"  => true,
-                         "data-miq_sparkle_off" => true,
-                         "data-miq_observe"     => {:url => url}.to_json)
+                         "data-miq_observe" => {:url => url}.to_json,
+                         "class"            => "selectpicker")
+            :javascript
+              miqInitSelectPicker();
+              miqSelectPickerEvent("profile_id", "#{url}", {beforeSend: true, complete: true});
         %tr
           %th.narrow
           %th= _("Policy Profiles in Effect")
