--- a/app/views/provider_foreman/explorer.html.haml
+++ b/app/views/provider_foreman/explorer.html.haml
@@ -1,5 +1,5 @@
 - content_for :search do
-  = render(:partial => "layouts/x_adv_searchbox", :locals => {:nameonly => [:foreman_providers_tree, :cs_filter_tree].include?(x_active_tree)})
+  = render(:partial => "layouts/x_adv_searchbox", :locals => {:nameonly => x_active_tree == :foreman_providers_tree})
   = render(:partial => 'layouts/quick_search')
 
 -# These are the initial divs that will go inside center_cell_div
@@ -13,6 +13,4 @@
 - else
   #main_div
     = render(:partial => 'layouts/x_gtl')
-    :javascript
-      var miq_after_onload = "if (miqDomElementExists('adv_searchbox_div')) $('#adv_searchbox_div').show();"
 
