Removed no longer used x_node parsing of double underscore
From https://github.com/ManageIQ/manageiq/issues/6211#issuecomment-177294414

These underscore checks are left over from Dhtmlxtrees, __ are no longer there after treebuilder presenter was introduced, those occurrences in OPS area can be changed to x_node.split("-")[0]

--- a/app/views/ops/_all_tabs.html.haml
+++ b/app/views/ops/_all_tabs.html.haml
@@ -85,7 +85,7 @@
             = render :partial => "settings_rhn_tab"
     -# Diagnostics
   - when :diagnostics_tree
-    - if x_node.split("__").last.split("-")[0] == "z"
+    - if x_node.split("-")[0] == "z"
       %ul.nav.nav-tabs
         = miq_tab_header("diagnostics_roles_servers", @sb[:active_tab]) do
           = _("Roles by Servers")
@@ -108,7 +108,7 @@
           = render :partial => "diagnostics_collect_logs_tab"
         = miq_tab_content("diagnostics_cu_repair", @sb[:active_tab]) do
           = render :partial => "diagnostics_cu_repair_tab"
-    - elsif x_node.split("__").last.split("-")[0] == "svr"
+    - elsif x_node.split("-")[0] == "svr"
       %ul.nav.nav-tabs
         - if @sb[:selected_server_id] == my_server_id || @selected_server.started?
           = miq_tab_header("diagnostics_summary", @sb[:active_tab]) do
