--- a/app/views/shared/buttons/_group_order_form.html.haml
+++ b/app/views/shared/buttons/_group_order_form.html.haml
@@ -18,25 +18,30 @@
                 :id       => "selected_fields")
             %td{:width => "30", :align => "left", :valign => "middle"}
               - if @edit[:new][:fields].length < 2
-                = image_tag(image_path('toolbars/up.png'), :class => "dimmed small")
+                %button.btn.btn-default.btn-disabled
+                  %i.fa.fa-angle-up.fa-lg
               - else
                 - t = _("Move selected fields up")
-                = link_to(image_tag(image_path('toolbars/up.png'), :class => "rollover small", :alt => t),
-                  {:action => 'group_reorder_field_changed', :button => 'up', :id => "seq"},
-                  "data-submit" => "column_lists",
-                  :remote       => true,
-                  "data-method" => :post,
-                  :title        => t)
-
+                %button.btn.btn-default{:title           => t,
+                                        :remote          => true,
+                                        "data-submit"    => "column_list",
+                                        "data-method"    => :post,
+                                        "data-click_url" => {:url => url_for(:action => 'group_reorder_field_changed',
+                                                                             :button => 'up',
+                                                                             :id     => "seq")}.to_json}
+                  %i.fa.fa-angle-up.fa-lg
               - if @edit[:new][:fields].length < 2
-                = image_tag(image_path('toolbars/down.png'), :class => "dimmed small")
+                %button.btn.btn-default.btn-disabled
+                  %i.fa.fa-angle-down.fa-lg
               - else
                 - t = _("Move selected fields down")
-                = link_to(image_tag(image_path('toolbars/down.png'), :class => "rollover small", :alt => t),
-                  {:action => 'group_reorder_field_changed', :button => 'down', :id => "seq"},
-                  "data-submit" => "column_lists",
-                  :remote       => true,
-                  "data-method" => :post,
-                  :title        => t)
+                %button.btn.btn-default{:title           => t,
+                                        :remote          => true,
+                                        "data-submit"    => "column_list",
+                                        "data-method"    => :post,
+                                        "data-click_url" => {:url => url_for(:action => 'group_reorder_field_changed',
+                                                                             :button => 'down',
+                                                                             :id     => "seq")}.to_json}
+                  %i.fa.fa-angle-down.fa-lg
           .note
             = _('* Select one or more consecutive groups to move up or down.')
