--- a/app/views/shared/buttons/_column_lists.html.haml
+++ b/app/views/shared/buttons/_column_lists.html.haml
@@ -16,28 +16,34 @@
             :style    => "width: 450px",
             :size     => 8,
             :id       => "available_fields")
-        %td{:width => "30", :valign => "middle"}
-          - if @edit[:new][:available_fields].length == 0
-            = image_tag(image_path('toolbars/right.png'), :class => "dimmed rollover small")
-          - else
-            - t = _("Move selected fields right")
-            = link_to(image_tag(image_path('toolbars/right.png'), :class => "rollover small", :alt => t),
-              {:action => 'group_form_field_changed', :button => 'right', :id => @custom_button_set.id || 'new'},
-              "data-submit" => 'column_lists',
-              :remote       => true,
-              "data-method" => :post,
-              :title        => t)
-
-          - if @edit[:new][:fields].length == 0
-            = image_tag(image_path('toolbars/left.png'), :class => "dimmed rollover small")
-          - else
-            - t = _("Move selected fields left")
-            = link_to(image_tag(image_path('toolbars/left.png'), :class => "rollover small", :alt => t),
-              {:action => 'group_form_field_changed', :button => 'left', :id => @custom_button_set.id || 'new'},
-              "data-submit" => 'column_lists',
-              :remote       => true,
-              "data-method" => :post,
-              :title        => t)
+        %td.text-center{:width => "40"}
+          .btn-group-vertical
+            - if @edit[:new][:available_fields].length == 0
+              %button.btn.btn-default.btn-disabled
+                %i.fa.fa-angle-right.fa-lg
+            - else
+              - t = _("Move selected fields right")
+              %button.btn.btn-default{:title           => t,
+                                      :remote          => true,
+                                      "data-submit"    => 'column_lists',
+                                      "data-method"    => :post,
+                                      "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                           :button => 'right',
+                                                                           :id     => @custom_button_set.id || 'new')}.to_json}
+                %i.fa.fa-angle-right.fa-lg
+            - if @edit[:new][:fields].length == 0
+              %button.btn.btn-default.btn-disabled
+                %i.fa.fa-angle-left.fa-lg
+            - else
+              - t = _("Move selected fields left")
+              %button.btn.btn-default{:title           => t,
+                                      :remote          => true,
+                                      "data-submit"    => 'column_lists',
+                                      "data-method"    => :post,
+                                      "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                           :button => 'left',
+                                                                           :id     => @custom_button_set.id || 'new')}.to_json}
+                %i.fa.fa-angle-left.fa-lg
       %td{:align => "left", :valign => "top"}
         = select_tag('selected_fields[]',
           options_for_select(@edit[:new][:fields], @selected),
@@ -47,44 +53,54 @@
           :id       => "selected_fields")
       %td{:width => "30", :valign => "middle"}
         - if @edit[:new][:fields].length < 2
-          = image_tag(image_path('toolbars/top.png'), :class => "dimmed rollover small")
+          %button.btn.btn-default.btn-disabled
+            %i.fa.fa-angle-double-up.fa-lg
         - else
           - t = _("Move selected fields to top")
-          = link_to(image_tag(image_path('toolbars/top.png'), :class => "rollover small", :alt => t),
-            {:action  => 'group_form_field_changed', :button  => 'top', :id => @custom_button_set.id || "new"},
-            "data-submit" => 'column_lists',
-            :remote       => true,
-            "data-method" => :post,
-            :title        => t)
-
+          %button.btn.btn-default{:title           => t,
+                                  :remote          => true,
+                                  "data-submit"    => 'column_lists',
+                                  "data-method"    => :post,
+                                  "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                       :button => 'top',
+                                                                       :id     => @custom_button_set.id || 'new')}.to_json}
+            %i.fa.fa-angle-double-up.fa-lg
         - if @edit[:new][:fields].length < 2
-          = image_tag(image_path('toolbars/up.png'), :class => "dimmed rollover small")
+          %button.btn.btn-default.btn-disabled
+            %i.fa.fa-angle-up.fa-lg
         - else
           - t = _("Move selected fields up")
-          = link_to(image_tag(image_path('toolbars/up.png'), :class => "rollover small", :alt => t),
-          {:action => 'group_form_field_changed', :button => 'up', :id => @custom_button_set.id || "new"},
-          "data-submit" => 'column_lists',
-          :remote       => true,
-          "data-method" => :post,
-          :title        => t)
+          %button.btn.btn-default{:title           => t,
+                                  :remote          => true,
+                                  "data-submit"    => 'column_lists',
+                                  "data-method"    => :post,
+                                  "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                       :button => 'up',
+                                                                       :id     => @custom_button_set.id || 'new')}.to_json}
+            %i.fa.fa-angle-up.fa-lg
         - if @edit[:new][:fields].length < 2
-          = image_tag(image_path('toolbars/down.png'), :class => "dimmed rollover small")
+          %button.btn.btn-default.btn-disabled
+            %i.fa.fa-angle-down.fa-lg
         - else
           - t = _("Move selected fields down")
-          = link_to(image_tag(image_path('toolbars/down.png'), :class => "rollover small", :alt => t),
-            {:action => 'group_form_field_changed', :button => 'down', :id => @custom_button_set.id || 'new'},
-            "data-submit" => 'column_lists',
-            :remote       => true,
-            "data-method" => :post,
-            :title        => t)
-
+          %button.btn.btn-default{:title           => t,
+                                  :remote          => true,
+                                  "data-submit"    => 'column_lists',
+                                  "data-method"    => :post,
+                                  "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                       :button => 'down',
+                                                                       :id     => @custom_button_set.id || 'new')}.to_json}
+            %i.fa.fa-angle-down.fa-lg
         - if @edit[:new][:fields].length < 2
-          = image_tag(image_path('toolbars/bottom.png'), :class => "dimmed rollover small")
+          %button.btn.btn-default.btn-disabled
+            %i.fa.fa-angle-double-down.fa-lg
         - else
           - t = _("Move selected fields to bottom")
-          = link_to(image_tag(image_path('toolbars/bottom.png'), :class => "rollover small", :alt => t),
-            {:action => 'group_form_field_changed', :button => 'bottom', :id => @custom_button_set.id || 'new'},
-            "data-submit" => 'column_lists',
-            :remote       => true,
-            "data-method" => :post,
-            :title        => t)
+          %button.btn.btn-default{:title           => t,
+                                  :remote          => true,
+                                  "data-submit"    => 'column_lists',
+                                  "data-method"    => :post,
+                                  "data-click_url" => {:url => url_for(:action => 'group_form_field_changed',
+                                                                       :button => 'bottom',
+                                                                       :id     => @custom_button_set.id || 'new')}.to_json}
+            %i.fa.fa-angle-double-down.fa-lg
