--- a/app/views/layouts/exp_atom/_edit_find.html.haml
+++ b/app/views/layouts/exp_atom/_edit_find.html.haml
@@ -119,9 +119,9 @@
           "data-miq_observe" => {:interval => '.5', :url => url}.to_json)
         - if @edit[@expkey][:val1][:type] == :percent
           \%
-        - elsif FORMAT_SUB_TYPES[@edit[@expkey][:val1][:type]][:units]
+        - elsif MiqExpression::FORMAT_SUB_TYPES[@edit[@expkey][:val1][:type]][:units]
           = select_tag('chosen_suffix',
-            options_for_select(FORMAT_SUB_TYPES[@edit[@expkey][:val1][:type]][:units], @edit[:suffix]),
+            options_for_select(MiqExpression::FORMAT_SUB_TYPES[@edit[@expkey][:val1][:type]][:units], @edit[:suffix]),
             :multiple              => false,
             :class                 => "widthed",
             "data-miq_sparkle_on"  => true,
@@ -240,9 +240,9 @@
               "data-miq_observe" => {:interval => '.5', :url => url}.to_json)
             - if @edit[@expkey][:val2][:type] == :percent
               \%
-            - elsif FORMAT_SUB_TYPES[@edit[@expkey][:val2][:type]][:units]
+            - elsif MiqExpression::FORMAT_SUB_TYPES[@edit[@expkey][:val2][:type]][:units]
               = select_tag('chosen_suffix2',
-                options_for_select(FORMAT_SUB_TYPES[@edit[@expkey][:val2][:type]][:units], @edit[:suffix2]),
+                options_for_select(MiqExpression::FORMAT_SUB_TYPES[@edit[@expkey][:val2][:type]][:units], @edit[:suffix2]),
                 :multiple              => false,
                 :class                 => "widthed",
                 "data-miq_sparkle_on"  => true,
