--- a/app/views/configuration/_ui_2.html.haml
+++ b/app/views/configuration/_ui_2.html.haml
@@ -112,7 +112,7 @@
                 %label.col-md-3.control-label
                   = _('Volumes')
                 .col-md-8
-                  %ul#list-inline= render_view_buttons(:cloudvolume, @edit[:new][:views][:cloudvolume])
+                  %ul.list-inline= render_view_buttons(:cloudvolume, @edit[:new][:views][:cloudvolume])
         - if has_any_role?(%w(ems_infra_show_list ems_cluster_show_list host_show_list resource_pool_show_list storage_show_list repository_show_list vandt_accord vms_filter_accord templates_filter_accord))
           %fieldset
             %h3
