--- a/app/views/report/_export_widgets.html.haml
+++ b/app/views/report/_export_widgets.html.haml
@@ -1,91 +1,108 @@
-%iframe.import-hidden-iframe{:name => "upload_target"}
+= render :partial => 'layouts/flash_msg'
 
-.import-flash-message
-  .alert
-    %span.icon-placeholder
-      %span.pficon
-      %span.pficon
-    %strong.message
+- if @import
+  %h3
+    = _('Import Widgets')
+  = form_tag('import_widgets', :id => 'import-widgets-form', :remote => true) do
+    %table.table.table-striped.table-bordered
+      %thead
+        %tr
+          %th.narrow
+            %input{:type => 'checkbox', :id => 'check-all'}
+          %th
+            = _('Widget name')
+          %th
+            = _('Status')
+      %tbody
+        - @import.each do |item|
+          %tr
+            %td.narrow
+              %input{:type => 'checkbox', :name => 'widgets_to_import[]', :value => item[:name]}
+            %td.treegrid-node
+              = item[:name]
+            %td
+              %img{:src => item[:status_icon]}
+              &nbsp;
+              = item[:status]
+    = hidden_field_tag(:import_file_upload_id, @import_file_upload_id)
 
-.import-or-export
+    .pull-right
+      = submit_tag(_('Commit'), :alt => _("Commit Changes"), :class => "btn btn-primary import-commit")
+      = submit_tag(_('Cancel'), :alt => _("Cancel Changes"), :class => "btn btn-default import-cancel")
+
+- else
   %h2
     = _('Widgets')
-
   %h3
     = _('Import')
-  = form_tag({:action => "upload_widget_import_file"},
-             :class     => "form-horizontal",
-             :target    => "upload_target",
-             :multipart => true,
-             :method    => :post) do
+  = form_tag('upload_widget_import_file', :id => 'upload-widgets-form', :class => "form-horizontal") do
     .form-group
       .col-md-4
-        = file_field("upload", "file",
-                     :class             => "lifestyle",
-                     "data-buttonName"  => "btn-default")
+        = file_field("upload", "file", :class => "lifestyle", "data-buttonName" => "btn-default")
         :javascript
-          $(":file").filestyle({icon: false,placeholder: "No file chosen"});
+          $(":file").filestyle({
+            icon: false,
+            placeholder: "No file chosen"
+          });
       .col-md-6
-        = submit_tag(_("Upload"), :id => "upload_widget_import", :class => "btn btn-default")
+        = submit_tag(_("Upload"), :class => "btn btn-default import-upload")
 
   %hr
 
   %h3
     = _('Export')
-  .form-horizontal
+  = form_tag('export_widgets', :id => "export-widgets-form", :class => 'form-horizontal', :method => :get) do
     .form-group
       %label.control-label.col-md-2
         = _('Available Widgets:')
       .col-md-8
         .export-choices
-          = form_tag({:action => "export_widgets"},
-                     :id     => "export-widgets-form",
-                     :method => :get) do
-            = select_tag("widgets[]",
-              options_for_select(@widget_exports),
-              :class    => "widget-export",
-              :size     => 15,
-              :style    => "min-width: 375px",
-              :multiple => true)
+          = select_tag("widgets[]", options_for_select(@widget_exports),
+            :class    => "widget-export",
+            :size     => 15,
+            :style    => "min-width: 375px",
+            :multiple => true)
 
-%table{:width => "100%"}
-  %tr
-    %td{:align => "right"}
-      .widget-export-buttons
-        = button_tag("Export", :id => "export-widgets", :class => "btn btn-primary btn-disabled")
-
-.import-data
-  %form#import-form
-    %h3
-      = _('Import Widgets')
-
-    %label{:for => 'toggle-all'}
-      = _('All')
-    %input#toggle-all{:type => 'checkbox'}
-
-    #import-grid{:style => "width: #{@winW - 50}px; height: #{center_div_height + 5}px; cursor: hand; overflow-x: auto; overflow-y: auto;"}
-
-    = hidden_field_tag(:import_file_upload_id, '', :class => "hidden-import-file-upload-id")
-
-%table{:width => "100%"}
-  %tr
-    %td{:align => "right"}
-      .widget-import-buttons
-        = button_tag(_('Commit'), :alt => _("Commit Changes"), :class => "btn btn-primary import-commit")
-        = button_tag(_('Cancel'), :alt => _("Cancel Changes"), :class => "btn btn-default import-cancel")
+    .pull-right
+      = submit_tag("Export", :class => "btn btn-primary export-widgets btn-disabled")
 
 :javascript
   $(function() {
-    $('#upload_widget_import').click(function() {
+    $('#toolbar').hide();
+
+    $('#upload-widgets-form').submit(function (e) {
       miqSparkleOn();
+      var data = new FormData(this);
+      miqJqueryRequest($(this).prop('action'), {
+        data:        data,
+        processData: false,
+        contentType: false,
+        cache:       false
+      });
+      e.preventDefault();
     });
 
-    setUpExportWidgetClickHandlers();
-    ImportSetup.listenForPostMessages(getAndRenderWidgetJson);
-    setUpImportWidgetClickHandlers();
+    $('#check-all').click(function (e) {
+      $("#import-form table tbody input[type='checkbox']").prop('checked', $(this).prop('checked'));
+    });
 
-    if ($('#toolbar').length > 0) {
-      $('#toolbar').hide();
-      $('.widget-export-buttons').show();
-    }
+
+    $('.widget-export').change(function() {
+      if ($('.widget-export').val() !== null) {
+        if ($('.export-widgets').hasClass('btn-disabled')) {
+          $('.export-widgets').removeClass('btn-disabled');
+        }
+      } else {
+        if (!$('.export-widgets').hasClass('btn-disabled')) {
+          $('.export-widgets').addClass('btn-disabled');
+        }
+      }
+    });
+
+    $('.export-widgets').click(function(e) {
+      if ($('.widget-export').val() == null) {
+        e.preventDefault();
+      }
+    });
+
   });
